feat: add upstream DNS rule groups
