# client_v2/src/api/model/upstreamRuleGroupIDRequest.ts
@@ -1,0 +1,3 @@
+export interface UpstreamRuleGroupIDRequest {
+    id: number;
+}
