# client_v2/src/api/model/upstreamRuleTestRequest.ts
@@ -1,0 +1,3 @@
+export interface UpstreamRuleTestRequest {
+    domain: string;
+}
